Corrected dark mode footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -52,3 +52,7 @@ body {
 .bg-alt {
     background-color: var(--color-fill-background-alt);
 }
+
+.invert {
+    filter: invert(1);
+}
